--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url(styles/header.css);
 :root{
---cor-de-fundo: #9949B4;
---cor-cabecalho: #FFFFFF;
+--cor-do-cabecalho: #FFFFFF;
+--cor-de-fundo: #83eb42;
 }
 body{
 background-color: var(--cor-de-fundo);
